# linux-iot-edge-gateway

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
artifacts/: README.md
cmake/toolchains/: aarch64-linux-gnu.cmake
config/: gateway.docker.yaml  gateway.systemd.yaml  gateway.yaml
data/: README.md  test_summary.md
data/test_frames/: README.md  fault_frames.hex  stream_cases.hex  valid_frames.hex
deploy/systemd/: linux-iot-edge-gateway.service
docker/: Dockerfile.gateway  README.md  entrypoint.sh
docs/: architecture.md  arm64_stability_test.md  debug_record.md  deployment.md  environment_capture.md  fault_injection.md  hardware_validation.md  health_check.md  http_observability.md  implementation_notes.md  interview_guide.md  logging.md  modbus.md  protocol.md  protocol_architecture.md  references.md  release.md  reproducible_evidence_ledger.md  reproducible_validation.md  resume.md  serial_replay.md  socketcan.md  stability_test.md  test_cases.md  validation_workflow.md
logs/: README.md  test_summary.md
scripts/: build_aarch64.sh  check_gateway_health.sh  collect_env.sh  collect_evidence_summary.sh  inject_bad_frames.py  inject_sticky_frames.py  inject_stream_cases.py  install_systemd_service.sh  migrate_file_cache.py  mock_modbus_rtu_slave.py  mock_serial_sender.py  mock_tcp_server.py  run_cache_migration_test.sh  run_fault_injection_test.sh  run_mqtt_security_smoke_test.sh  run_multi_serial_smoke_test.sh  run_observability_test.sh  run_protocol_integration_test.sh  run_serial_smoke_test.sh  run_shutdown_smoke_test.sh  run_smoke_test.sh  run_stability_test.sh  run_tcp_smoke_test.sh  run_validation_workflow_check.sh  sanitize_logs.py  serial_replay.py  setup_aarch64_sysroot.sh  uninstall_systemd_service.sh  verify_release_version.sh
src/: main.cpp  version.h.in
src/app/: runtime_metrics.cpp  runtime_metrics.h  runtime_status.cpp  runtime_status.h  sensor_data.cpp  sensor_data.h  shutdown_signal.cpp  shutdown_signal.h
src/cache/: file_cache.cpp  file_cache.h  message_cache.h  sqlite_cache.cpp  sqlite_cache.h
src/can/: can_interface.h  can_parser.cpp  can_parser.h  socketcan_device.cpp  socketcan_device.h
src/config/: gateway_config.cpp  gateway_config.h
src/device/: can_device.cpp  can_device.h  device_data.cpp  device_data.h  device_interface.h  device_manager.cpp  device_manager.h  modbus_device.cpp  modbus_device.h  serial_port.cpp  serial_port.h  uart_device.cpp  uart_device.h
src/http/: http_server.cpp  http_server.h
src/log/: logger.cpp  logger.h
src/modbus/: modbus_rtu.cpp  modbus_rtu.h
src/mqtt/: mqtt_client.cpp  mqtt_client.h  reliable_publisher.cpp  reliable_publisher.h
src/protocol/: byte_ring_buffer.h  crc16.cpp  crc16.h  frame.h  frame_parser.cpp  frame_parser.h
src/publisher/: publisher.h  publisher_group.cpp  publisher_group.h  tcp_publisher.cpp  tcp_publisher.h
src/tcp/: tcp_client.cpp  tcp_client.h
tests/: byte_ring_buffer_test.cpp  cache_replay_test.cpp  crc16_test.cpp  device_manager_test.cpp  file_cache_replace_test.cpp  file_cache_test.cpp  frame_parser_bad_crc_test.cpp  frame_parser_crc_diagnostic_test.cpp  frame_parser_half_test.cpp  frame_parser_length_diagnostic_test.cpp  frame_parser_ring_buffer_test.cpp  frame_parser_stream_test.cpp  frame_parser_test.cpp  frame_test.cpp  gateway_config_input_sources_test.cpp  gateway_config_invalid_test.cpp  gateway_config_test.cpp  http_server_test.cpp  logger_test.cpp  mqtt_client_test.cpp  publisher_group_test.cpp  reliable_publisher_test.cpp  runtime_observability_test.cpp  sensor_data_json_test.cpp  sensor_data_parse_test.cpp  sensor_data_struct_test.cpp  sensor_data_validate_test.cpp  shutdown_signal_test.cpp  sqlite_cache_persistence_test.cpp  sqlite_cache_test.cpp  tcp_client_test.cpp  uart_device_error_stats_test.cpp
tests/can/: can_parser_test.cpp
tests/modbus/: modbus_device_timeout_test.cpp  modbus_rtu_test.cpp
